# billigast-goteborg

./: .gitignore  Cargo.toml  main.db  refinery.toml  rust-toolchain.toml
.github/workflows/: deploy.yml
firefox-plugin/: manifest.json
firefox-plugin/popup/: index.html  index.js
manage/: package-lock.json  package.json
migrate/: V1__init.sql  V2__init_butik_commodity.sql  V3__data_2023_11_05.sql
src/: main.rs  model.rs  render.rs  store.rs
src/crawler/: coop.rs  hemkop.rs  ica.rs  mod.rs  willys.rs
template/: coop.js.template  ica.js.template  index.html.template  willys.js.template
