[package]
name = "billigast-goteborg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-sqlite = "0.1.0"
async-trait = "0.1.74"
futures = "0.3.29"
indicatif = "0.17.7"
itertools = "0.11.0"
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tera = "1.19.1"
tokio = { version = "1.33.0", features = [
    "macros",
    "sync",
    "rt",
    "rt-multi-thread",
] }
tokio-stream = "0.1.14"
